Added SQ Config

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -39,3 +39,8 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+    - name: SQ Analyse
+      uses: sonarsource/sonarqube-scan-action@master
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
