added test information

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,1 +1,4 @@
 sonar.projectKey=tom-howlett-sonarsource_python-flask-demo_8b8a16a4-99c6-48d1-a728-ae14e7bdeb50
+sonar.sources=pokedex
+sonar.tests=tests
+sonar.python.coverage.reportPaths=cov.xml
